<resources>
    <string name="app_name">PipDroid</string>
    <string name="app_version">version 2.0.12</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="info_dialog_close_link"><a href="https://www.reddit.com/user/malto4">Reddit</a></string>
    <string name="search_menu_title">Search</string>
    <string name="mode_phone">Phone</string>
    <string name="mode_pipboy_2000">PipBoy 2000</string>
    <string name="mode_pipboy_3000">PipBoy 3000</string>
    <string name="mode_description_phone">The app runs in full-screen mode and is controlled via touchscreen, without interacting with the PipBoy hardware. Radio, the Geiger counter and holotape reading require the PipBoy case and are unavailable in this mode.</string>
    <string name="mode_description_pipboy_2000">The app\'s display area is set manually. The app is controlled by the PipBoy 2000 hardware. Touchscreen control is still available, but optional.</string>
    <string name="mode_description_pipboy_3000">This mode is under development.</string>
    <string name="mode_select_button">Select</string>
    <string name="wizard_hardware_title">HARDWARE INSTRUCTIONS</string>
    <string name="wizard_hardware_text">Insert your phone into the PipBoy case.</string>
    <string name="wizard_back">Back</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_display_area_title">DISPLAY AREA</string>
    <string name="wizard_done">Done</string>
    <string name="wizard_reset">Clear</string>
    <string name="wizard_cancel">Cancel</string>
    <string name="wizard_hint_resize">Adjust the display area to fit the PipBoy screen.</string>
    <string name="wizard_permissions_title">PERMISSIONS</string>
    <string name="wizard_permissions_text">PipBoy needs Bluetooth and location permissions (to scan for and connect to the case hardware) and notification permission (background connection to the case shows a persistent connection-status notification). The system usually asks for these on its own \u2014 the button below is only needed if the system dialog doesn\'t appear for some reason.</string>
    <string name="wizard_grant_permissions">Grant Permissions</string>
    <string name="wizard_pairing_title">PAIRING</string>
    <string name="wizard_pairing_scanning">Scanning\u2026 Make sure the PipBoy case is powered on and nearby.</string>
    <string name="wizard_pairing_found">Found %1$d device(s). Select your PipBoy from the list.</string>
    <string name="wizard_pairing_none_found">Nothing found. Check the case\'s power and tap \"Scan Again\".</string>
    <string name="wizard_pairing_bluetooth_off">Bluetooth is off.</string>
    <string name="wizard_pairing_scan_failed">Couldn\'t start scanning, please try again.</string>
    <string name="wizard_pairing_rescan">Scan Again</string>
    <string name="wizard_hint_connect_hardware">While the PipBoy is off, this screen stays black. To turn on the PipBoy, press POWER.</string>
    <string name="wizard_hide_hint">Hide Hint</string>
    <string name="current_rad_value">0</string>
    <string name="max">MAX</string>
    <string name="power_off">Power Off</string>
    <string name="geiger_reset_button">Reset</string>
    <string name="geiger_status_ok">You\'re fine</string>
    <string name="geiger_status_mild">Mild radiation sickness\nYou should see a doctor</string>
    <string name="geiger_status_moderate">Radiation sickness\nSee a doctor as soon as possible</string>
    <string name="geiger_status_severe">Severe radiation sickness\nHopefully a doctor reaches you in time</string>
    <string name="geiger_status_critical">Extremely critical damage\nAre you still alive?</string>
    <string name="rad_cur_value">0</string>
    <string name="radio">Radio</string>
    <string name="radio_status_on">ON AIR</string>
    <string name="radio_status_off">OFF AIR</string>
    <string name="radio_frequency_placeholder">--.- MHz</string>
    <string name="radio_volume_label">Volume</string>
    <string name="radio_volume_value_placeholder">50%</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="title_stats">STATS</string>
    <string name="title_stats_status">Status</string>
    <string name="title_stats_status_lvl">1</string>
    <string name="title_stats_wound_light">Light Wound</string>
    <string name="title_stats_wound_heavy">Heavy Wound</string>
    <string name="title_stats_stunned">Stunned</string>
    <string name="status_wound_bleeding_label">Bleeding</string>
    <string name="status_wound_bandage_label">Bandage</string>
    <string name="status_wound_stunned_label">Waking up in</string>
    <string name="status_wound_skip">Skip</string>
    <string name="status_revive_hint">Tap the Vault Boy figure to reset</string>
    <string name="status_text_healthy">"Hooray, you\'re healthy!\nIf you get wounded, press a button.\nYou can tap the Vault Boy\'s body to mark where you got hit."</string>
    <string name="status_text_stunned">"Whoops, you\'re stunned!\nWaking up in: "</string>
    <string name="status_text_wounded">"Ouch, you\'re wounded!\n"</string>
    <string name="status_text_dead_header">Oh no, you died!</string>
    <string name="stats_cnd_status_dead">DEAD</string>
    <string name="title_items">ITEMS</string>
    <string name="title_data">DATA</string>
    <string name="title_data_location">Megaton</string>
    <string name="title_data_date">10.21.81</string>
    <string name="title_data_time">11:35</string>
    <string name="title_radio">RADIO</string>
    <string name="title_bottom_common_name_placeholder">PLAYER</string>
    <string name="title_bottom_common_region_placeholder">RICHMOND</string>
    <string name="title_bottom_common_radiation_placeholder">0</string>
    <string name="title_bottom_common_radiation_icon_description">Radiation</string>
    <string name="stats_special">SPECIAL</string>
    <string name="stats_special_strength">Strength</string>
    <string name="special_strength_description">Strength is a measure of your raw physical power. It affects how much you can carry, the power of all melee attacks, and your effectiveness with many heavy weapons.</string>
    <string name="special_strength_value">10</string>
    <string name="special_perception">Perception</string>
    <string name="special_perception_description">A high Perception grants a bonus to the Explosives, Lockpick and Energy Weapons skills, and determines when red compass markings appear (which indicate threats).</string>
    <string name="special_perception_value">10</string>
    <string name="special_endurance">Endurance</string>
    <string name="special_endurance_description">Endurance is a measure of your overall physical fitness. A high Endurance gives bonuses to health, environmental resistances, and the Survival and Unarmed skills.</string>
    <string name="special_endurance_value">9</string>
    <string name="special_charisma">Charisma</string>
    <string name="special_charisma_description">"Having a high Charisma will improve people's disposition toward you, and give bonuses to both the Barter and Speech skills."</string>
    <string name="special_charisma_value">10</string>
    <string name="special_intelligence">Intelligence</string>
    <string name="special_intelligence_description">"Intelligence affects the Science, Repair and medicine skills. The higher your Intelligence, the more Skill Points you'll be able to distribute when you level up."</string>
    <string name="special_intelligence_value">9</string>
    <string name="special_agility">Agility</string>
    <string name="special_agility_description">Agility affects your Guns and Sneak skills, and the number of Action Points available for V.A.T.S.</string>
    <string name="special_agility_value">9</string>
    <string name="special_luck">Luck</string>
    <string name="special_luck_description">Raising your Luck will raise all of your skills a little. Having a high Luck will also improve your critical chance with all weapons.</string>
    <string name="special_luck_value">10</string>
    <string name="stats_skills">Skills</string>
    <string name="skill_barter">Barter</string>
    <string name="skill_barter_description">The Barter skill affects the prices you get for buying and selling items. In general, the higher your Barter skill, the lower your prices on purchased items.</string>
    <string name="skill_barter_value">100</string>
    <string name="skill_big_guns">Big Guns</string>
    <string name="skill_big_guns_description">The Big Guns skill determines your combat effectiveness with all oversized weapons such as the Fat Man, Missile Launcher, Flamer, Minigun and Gatling Laser.</string>
    <string name="skill_big_guns_value">100</string>
    <string name="skill_energy_weapons">Energy Weapons</string>
    <string name="skill_energy_weapons_description">The Energy Weapons skill determines your effectiveness with any weapon that uses Small Energy Cells, Micro Fusion Cells, EC Packs, or Flamer Fuel as ammunition.</string>
    <string name="skill_energy_weapons_value">100</string>
    <string name="skill_explosives">Explosives</string>
    <string name="skill_explosives_description">The Explosives skill determines the ease of disarming any hostile mines and the effectiveness of any explosive weapon (all mines, all grenades, Missile Launcher, Fat Man, etc.).</string>
    <string name="skill_explosives_value">80</string>
    <string name="skill_lockpick">Lockpick</string>
    <string name="skill_lockpick_description">The Lockpick skill is used to open locked doors and containers.</string>
    <string name="skill_lockpick_value">100</string>
    <string name="skill_medicine">Medicine</string>
    <string name="skill_medicine_description">"The Medicine skill determines how many hit points you'll replenish upon using a Stimpak, and the effectiveness of Rad-X and RadAway."</string>
    <string name="skill_medicine_value">70</string>
    <string name="skill_melee_weapons">Melee Weapons</string>
    <string name="skill_melee_weapons_description">The Melee Weapons skill determines your effectiveness with any melee weapon, from the simple lead pipe all the way up to the high-tech Super Sledge.</string>
    <string name="skill_melee_weapons_value">40</string>
    <string name="skill_repair">Repair</string>
    <string name="skill_repair_description">The Repair skill allows you to maintain your weapons and apparel. In addition, Repair allows you to create items and Guns ammunition at reloading benches.</string>
    <string name="skill_repair_value">100</string>
    <string name="skill_science">Science</string>
    <string name="skill_science_description">The Science skill represents your combined scientific knowledge, and is primarily used to hack restricted computer terminals. It can also be used to recycle Energy Weapon ammunition at workbenches.</string>
    <string name="skill_science_value">100</string>
    <string name="skill_small_guns">Small Guns</string>
    <string name="skill_small_guns_description">The Small Guns determines your effectiveness with all conventional projectile weapons, such as 10mm pistol, BB Gun, Assault Rifle, and Combat Shotgun.</string>
    <string name="skill_small_guns_value">100</string>
    <string name="skill_sneak">Sneak</string>
    <string name="skill_sneak_description">"The higher your Sneak skill, the easier it is to remain undetected, steal an item, or pick someone's pocket. Successfully attacking while undetected grants an automatic critical hit."</string>
    <string name="skill_sneak_value">80</string>
    <string name="skill_speech">Speech</string>
    <string name="clock_feature_time">Time</string>
    <string name="clock_feature_alarm">Alarm</string>
    <string name="clock_feature_timer">Timer</string>
    <string name="clock_feature_stopwatch">Stopwatch</string>
    <string name="clock_feature_melody">Ringtone</string>
    <string name="settings">SETTINGS</string>
</resources>